Fix : Dto 구성 수정, BaseEntity 위치 수정 - Exception 기능 추가 - Image 입출력 수정